tdf#144695 VendorBase::isValidArch also for macOS

Lets extend it only to macOS (where there is some confusion now with Rosetta-
translated vs. native processes on Apple M1 machines), not to all Unix-like OSs:
The comment that it "is not defined what the exact [os.arch] values are" is
still relevant.  At least for OpenJDK, while Windows has a hardcoded list of
possible values in GetJavaProperties at
<https://github.com/openjdk/jdk/blob/9604ee82690f89320614b37bfef4178abc869777/src/java.base/windows/native/libjava/java_props_md.c#L568>,
the corresponding non-Windows code in GetJavaProperties at
<https://github.com/openjdk/jdk/blob/319a3b994703aac84df7bcde272adfcb3cdbbbf0/jdk/src/solaris/native/java/lang/java_props_md.c#L175>
uses ARCHPROPNAME which, via

> -DARCHPROPNAME='"$(OPENJDK_TARGET_CPU_OSARCH)"'

at
<https://github.com/openjdk/jdk/blob/c363db8ed00ff27eadf06294364d908d6a7d03a6/jdk/makefiles/CompileNativeLibraries.gmk#L185>,
appears to somehow come out of Autoconf at
<https://github.com/openjdk/jdk/blob/228c21635b011fbf956b83a0b07fc297e9a34c46/common/autoconf/spec.gmk.in#L93>,
so probably can show some variance in actual values being used.

Change-Id: I16725cd9365f6bd034372c653aa43ab84d487b98
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125401
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>